--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">NasaApp</string>
     <string name="patents">Patents</string>
     <string name="favorite">Favourites</string>
+    <string name="label_text">Object name</string>
 </resources>
